# SportsLabKit

./: .all-contributorsrc  .deepsource.toml  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile  Gemfile  LICENSE  Makefile  README.md  _config.yml  awesome-computer-vision-in-sports.md  contributing.md  contributors.md  dev.md  dev_enviroment.yaml  dev_environment.yaml  index.md  profile.prospector.yaml  pyproject.toml  requirements.txt  setup.py  test_enviroment.sh  test_enviroment_pypi.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: docker-image.yml  lint.yml  mypy.yml  prospector.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pydocstyle.yml  ruff.yml  test-pypi.yml
.sass-cache/09c2184fc58cb9dfe28485322d8a9b484ced7cbc/: _alerts.scssc  _badges.scssc  _breadcrumbs.scssc  _button-groups.scssc  _buttons.scssc  _carousel.scssc  _close.scssc  _code.scssc  _component-animations.scssc  _dropdowns.scssc  _forms.scssc  _glyphicons.scssc  _grid.scssc  _input-groups.scssc  _jumbotron.scssc  _labels.scssc  _list-group.scssc  _media.scssc  _mixins.scssc  _modals.scssc  _navbar.scssc  _navs.scssc  _normalize.scssc  _pager.scssc  _pagination.scssc  _panels.scssc  _popovers.scssc  _print.scssc  _progress-bars.scssc  _responsive-embed.scssc  _responsive-utilities.scssc  _scaffolding.scssc  _tables.scssc  _thumbnails.scssc  _tooltip.scssc  _type.scssc  _utilities.scssc  _variables.scssc  _wells.scssc
.sass-cache/1257738dd382b06e11f5a10ab4d89defba231937/: _alerts.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _hide-text.scssc  _reset-text.scssc  _table-row.scssc  _text-emphasis.scssc  _text-overflow.scssc
.sass-cache/70c8075d456a0f04afeb397c6a1ff12f80dcb271/: _badges.scssc  _breadcrumbs.scssc  _button-groups.scssc  _buttons.scssc  _carousel.scssc  _close.scssc  _code.scssc  _dropdowns.scssc  _grid.scssc  _input-groups.scssc  _jumbotron.scssc  _list-group.scssc  _navbar.scssc  _navs.scssc  _panels.scssc  _popovers.scssc  _responsive-utilities.scssc  _tables.scssc  _type.scssc  _utilities.scssc  _wells.scssc
.sass-cache/71b78cd20f49a7aa50dde84e81174862bde36855/: _bootstrap.scssc  _mixins.scssc
.sass-cache/83a25784d92bc1c87a4efde40fe6d34e57286a7b/: _alerts.scssc  _background-variant.scssc  _border-radius.scssc  _buttons.scssc  _center-block.scssc  _clearfix.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _grid.scssc  _hide-text.scssc  _image.scssc  _labels.scssc  _list-group.scssc  _nav-divider.scssc  _nav-vertical-align.scssc  _opacity.scssc  _pagination.scssc  _panels.scssc  _progress-bar.scssc  _reset-filter.scssc  _reset-text.scssc  _resize.scssc  _responsive-visibility.scssc  _size.scssc  _tab-focus.scssc  _table-row.scssc  _text-emphasis.scssc  _text-overflow.scssc  _vendor-prefixes.scssc
.sass-cache/8d06f2436e622f56ac532d7a49677fe2cae56f95/: _alerts.scssc  _background-variant.scssc  _border-radius.scssc  _buttons.scssc  _center-block.scssc  _clearfix.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _grid.scssc  _hide-text.scssc  _image.scssc  _labels.scssc  _list-group.scssc  _nav-divider.scssc  _nav-vertical-align.scssc  _opacity.scssc  _pagination.scssc  _panels.scssc  _progress-bar.scssc  _reset-filter.scssc  _reset-text.scssc  _resize.scssc  _responsive-visibility.scssc  _size.scssc  _tab-focus.scssc  _table-row.scssc  _text-emphasis.scssc  _text-overflow.scssc  _vendor-prefixes.scssc
.sass-cache/8f3dc021f8379791c2cd8f39bba2241cf8d0d36b/: _bootstrap.scssc  _mixins.scssc
.sass-cache/eb8d5271a1fcd89cac22cb604f58c53b1d6a8c70/: _bootstrap.scssc  _mixins.scssc
.sass-cache/f8870c511764807665ded7572ce58c37dd8d9d58/: _alerts.scssc  _badges.scssc  _breadcrumbs.scssc  _button-groups.scssc  _buttons.scssc  _carousel.scssc  _close.scssc  _code.scssc  _component-animations.scssc  _dropdowns.scssc  _forms.scssc  _glyphicons.scssc  _grid.scssc  _input-groups.scssc  _jumbotron.scssc  _labels.scssc  _list-group.scssc  _media.scssc  _mixins.scssc  _modals.scssc  _navbar.scssc  _navs.scssc  _normalize.scssc  _pager.scssc  _pagination.scssc  _panels.scssc  _popovers.scssc  _print.scssc  _progress-bars.scssc  _responsive-embed.scssc  _responsive-utilities.scssc  _scaffolding.scssc  _tables.scssc  _thumbnails.scssc  _tooltip.scssc  _type.scssc  _utilities.scssc  _variables.scssc  _wells.scssc
_includes/: header.html  home-hero.html  test_data.html  test_data_full.html  test_data_split.html
_layouts/: home.html
_site/: atom.xml  feed.xml  index.html
_site/about/: index.html
_site/dev/: index.html
configs/detection/: YOLOv5.yaml
data/: README.md
data/raw/: left_keypoints.xml  right_keypoints.xml
docs/: .mmdc.json  01_get_started.rst  04_api.rst  04_contributing.rst  05_awesome.rst  05_contributing.rst  Makefile  _config.yml  api.rst  conf.py  config.yml  docs_environment.yaml  index.rst  notebooks  prepend_titles.py  requirements.txt  user_guide.rst
docs/01_get_started/: dataset_preparation.rst  installation.rst
docs/_site/: atom.xml  feed.xml  index.html
docs/api/: soccertrack.cli.rst  soccertrack.datasets.downloader.rst  soccertrack.datasets.kaggle.rst  soccertrack.datasets.rst  soccertrack.detect.rst  soccertrack.io.file.rst  soccertrack.io.rst  soccertrack.logging.rst  soccertrack.metrics.hota.rst  soccertrack.metrics.identity.rst  soccertrack.metrics.mota.rst  soccertrack.metrics.object_detection.rst  soccertrack.metrics.rst  soccertrack.rst  (+13 more)
notebooks/: detect_and_track.ipynb  user_guide.md  yaml_configuration.ipynb
rtd/: make.bat  requirements.txt
sandbox/: error_log.txt  functions.py  io.py  iou.ipynb  line_detection.py  metrics.py  utils.py
soccertrack/: __init__.py  checks.py  cli.py  detect.py  detect_and_track.py  logger.py  logging.py  notebook_utils.py  pipeline.py  track.py  tracker.py  types.py  viz.py
sportslabkit/: __init__.py  callbacks.py  checks.py  cli.py  constants.py  logger.py  notebook_utils.py
src/: detect.py
tests/: readme.md  test_functions.py  test_io.py  test_logger.py  test_metrics.py  test_utils.py
(+355 files in other folders)
