[project]
name = "sportslabkit"
version = "0.1.0"
description = "A Python package for sports analytics."
authors = [{name = "Atom Scott"}]
license = "GPL-3.0-or-later"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["sportslabkit"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true

[tool.pep257]
ignore = ["D101", "D105", "D200", "D202", "D411", "D213", "D413", "D406", "D407"]
add_ignore = ["D102", "D103"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
