[tool.poetry]
name = "sportslabkit"
version = "0.3.0a3"
description = "A Python package for sports analytics."
readme = "README.md"
authors = ["Atom Scott <atom.james.scott@gmail.com>"]
license = "GPL-3.0-or-later"
documentation = "https://sportslabkit.readthedocs.io/en/latest/"
repository = "https://github.com/AtomScott/SportsLabKit"
keywords = ["sports", "analytics", "data", "science", "machine", "learning"]
homepage = "https://github.com/AtomScott/SportsLabKit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[build-system]
requires = ["wheel", "setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["I001", "E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["sportslabkit"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true

[tool.pep257]
ignore = ["D100", "D101", "D105", "D200", "D202", "D411", "D213", "D413", "D406", "D407"]
add_ignore = ["D102", "D103"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
rich = "^12.5.1"
scikit-learn = "^1.2.1"
gitpython = "^3.1.30"
Cython = "*"
Pillow = "*"
six = "*"
yacs = "*"
torch = "*"
torchvision = "*"
vidgear = { version = "0.3.0", extras = ["core"] }
jsonargparse = { version = "4.20.0", extras = ["signatures"] }
ultralytics = "*"
seedir = "*"
py-cpuinfo = "*"
black = "*"
ffmpeg-python = "^0.2.0"
pytorch_lightning = "*"
einops = "^0.6.0"
protobuf = "^3.20.0"
ipython = "^8.5.0"
labelbox = "^3.35.0"
filterpy = "^1.4.5"
python-dotenv = "^0.21.1"
opencv-contrib-python = "*"
numpy = "^1.22.4"
scikit-video = "^1.1.11"
tensorboard = "^2.11.2"
docformatter = "^1.5.1"
scipy = "^1.8.1"
kaggle = "^1.5.12"
optuna = "^3.1.1"
networkx = "^3.1"
fire = "^0.5.0"
ndjson = "^0.3.1"
mplsoccer = "^1.1.10"
loguru = "^0.6.0"
omegaconf = "^2.2.2"
types-python-dateutil = "^2.8.17"
gdown = "^4.7.1"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.0.6"
mypy = "^1.5.1"
ruff = "^0.0.287"
papermill = "^2.4.0"
pytest-xdist = "^3.3.1"
pytest = "^7.1.2"
jupyter = "^1.0.0"
ipywidgets = "^8.0.4"
no-implicit-optional = "^1.4"
pip = "*"
black = "^23.7.0"

[tool.poetry.group.extras.dependencies]
clip = {git = "https://github.com/openai/CLIP.git"}


[tool.semantic_release]
version_variable = "pyproject.toml:version"


